// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:tableview 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Service"
          >
            <div
              class="cxd-Service-body"
            >
              <table
                class="cxd-TableView"
                style="width: 100%; border-collapse: collapse;"
              >
                <tbody>
                  <tr
                    style="background: rgb(247, 247, 247);"
                  >
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          地区
                        </span>
                      </span>
                    </td>
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          城市
                        </span>
                      </span>
                    </td>
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          销量
                        </span>
                      </span>
                    </td>
                  </tr>
                  <tr>
                    <td
                      rowspan="2"
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          华北
                        </span>
                      </span>
                    </td>
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          北京
                        </span>
                      </span>
                    </td>
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          20
                        </span>
                      </span>
                    </td>
                  </tr>
                  <tr>
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          天津
                        </span>
                      </span>
                    </td>
                    <td
                      style="font-weight: normal; width: auto; text-align: left; vertical-align: center;"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          19
                        </span>
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tableview layout 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <table
            class="cxd-TableView"
            style="width: 100%; border-collapse: collapse;"
          >
            <tbody>
              <tr
                style="background: rgb(254, 206, 234);"
              >
                <td
                  align="center"
                  colspan="2"
                  style="font-weight: normal; width: auto; text-align: center; vertical-align: center;"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      头部
                    </span>
                  </span>
                </td>
              </tr>
              <tr>
                <td
                  rowspan="2"
                  style="font-weight: normal; background: rgb(254, 241, 210); width: 200px; text-align: left; vertical-align: center;"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      侧边
                    </span>
                  </span>
                </td>
                <td
                  align="center"
                  style="font-weight: normal; background: rgb(169, 253, 216); width: auto; text-align: center; vertical-align: center;"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      右上
                    </span>
                  </span>
                </td>
              </tr>
              <tr
                style="height: 200px;"
              >
                <td
                  align="center"
                  style="font-weight: normal; background: rgb(215, 248, 255); width: auto; text-align: center; vertical-align: center;"
                >
                  <table
                    class="cxd-TableView"
                    style="width: 100%; border-collapse: collapse;"
                  >
                    <tbody>
                      <tr>
                        <td
                          align="center"
                          style="font-weight: normal; width: auto; text-align: center; vertical-align: center;"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              栏目 1
                            </span>
                          </span>
                        </td>
                        <td
                          align="center"
                          style="font-weight: normal; width: auto; text-align: center; vertical-align: center;"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              栏目 2
                            </span>
                          </span>
                        </td>
                        <td
                          align="center"
                          style="font-weight: normal; width: auto; text-align: center; vertical-align: center;"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              栏目 3
                            </span>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
              <tr>
                <td
                  align="center"
                  colspan="2"
                  style="font-weight: normal; background: rgb(206, 197, 250); width: auto; text-align: center; vertical-align: center;"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      底部
                    </span>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
